--- a/src/component/note/note.scss
+++ b/src/component/note/note.scss
@@ -4,8 +4,16 @@
 }
 .note-list-item{
   width: 100%;
-  min-height: 80px;
-  padding: 10px 30px;
-  background: pink;
+  min-height: 70px;
+  padding: 20px 30px;
+  background: #ffffff;
   border-radius: 10px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+.sub-title{
+  font-weight: 700;
+}
+.content{
+  margin-top: 16px;
 }
