--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f9f9f9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.root {
+  padding-top: 80px;
+}
+
+.left-wrap {
+  width: 300px;
+  height: 500px;
+  background: pink;
+  position: fixed;
+  left: 30px;
+  top: 50%;
+  margin-top: -250px;
 }
