--- a/src/component/note/note.scss
+++ b/src/component/note/note.scss
@@ -8,7 +8,7 @@
   padding: 20px 30px;
   background: #ffffff;
   border-radius: 10px;
-  margin-top: 30px;
+  margin-bottom: 30px;
   cursor: pointer;
 }
 .sub-title{
