--- a/src/index.css
+++ b/src/index.css
@@ -13,20 +13,14 @@ code {
     monospace;
 }
 
-
-.left-wrap {
-  width: 300px;
-  height: 500px;
-  background: pink;
-  position: fixed;
-  left: 30px;
-  top: 50%;
-  margin-top: -250px;
-}
 .layout .logo {
-  width: 120px;
-  height: 31px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px 24px 16px 0;
+  width: 50px;
+  height: 50px;
+  /* margin: 16px 24px 16px 0; */
   float: left;
+  margin-right: 60px;
+}
+.layout .logo img{
+  width: 100%;
+  height: 100%;
 }
